# wakedock-backend

./: .env.v1.0.0  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  MVC-MIGRATION-TODO.md  README.md  STYLE_GUIDE.md  TODO-MVC-MIGRATION.md  alembic.ini  apply_v063_standards.py  check_syntax_status.py  code_analysis_v0.6.1.json  code_analyzer.py  core_validation_0.6.2.py  create_admin_user.py  docker-entrypoint.sh  emergency_recovery.py  fastapi_integration_test.py  final_analytics_test.py  final_mvc_integration_test.py  final_validation.py  final_validation_0.6.2.py  fix_analytics_models.py  fix_analytics_models_clean.py  fix_cache.py  fix_docstrings.py  fix_syntax.py  fix_table_conflicts.py  health_check.py  implement_v0.6.3.py  integration_summary.py  integration_test.py  manage.py  manage.sh  mock_cache.py  mvc_final_validation.py  mvc_integration.py  mvc_status_report.py  pyproject.toml  pyproject.toml.backup  (+29 more)
alembic/: env.py
alembic/versions/: 20250717_1848_ec9e73b6d9c3_add_notification_and_dashboard_tables_.py
config/: alerts.conf
docs/: advanced_analytics_v0.2.3.md  alerts.md  api.md  centralized-logs.md  deployment.md  development.md  monitoring.md
scripts/: backup.sh  health-check.sh  init_auth.py  init_db.py  migrate.sh  restore.sh  seed_data.py  setup.bat  setup.sh
tests/: conftest.py  test_advanced_analytics.py  test_alerts_api.py  test_alerts_service.py  test_cache_manager.py  test_cache_simple.py  test_centralized_logs.py  test_compose_integration.py  test_containers_api.py  test_docker_events_simple.py  test_log_optimization.py  test_monitoring.py  test_new_routes.py  test_realtime_monitoring.py  test_security_services.py  test_security_validation.py  test_system_metrics.py  test_system_metrics_simple.py  test_websocket_manager.py
tests/api/: test_auth.py  test_services.py
tests/e2e/: README.md  test_dashboard.py
tests/fixtures/: docker_fixtures.py
tests/integration/: test_api.py  test_caddy_integration.py  test_service_lifecycle.py  test_system_integration.py
tests/unit/: test_api_endpoints_simple.py  test_caddy.py  test_models.py  test_orchestrator.py  test_security_simple.py  test_websocket_simple.py
wakedock/: __init__.py  config.py  exceptions.py  logging.py  main.py  metrics.py
wakedock/api/: app.py  app_auth.py  app_full.py  app_minimal.py  middleware.py  router.py
wakedock/api/auth/: __init__.py  dependencies.py  jwt.py  models.py  password.py  routes.py
wakedock/api/routes/: __init__.py  alerts.py  analytics.py  auth.py  auto_deployment.py  centralized_logs.py  cicd.py  compose_stacks.py  container_lifecycle.py  container_logs.py  containers.py  dashboard_api.py  env_files.py  environment.py  health.py  images.py  logs.py  logs_optimization.py  logs_optimization_backup.py  logs_optimization_fixed.py  mobile_api.py  monitoring.py  nextjs_ssr.py  notification_api.py  plugins.py  proxy.py  rbac.py  security_audit.py  services.py  stacks.py  swarm.py  system.py  user_preferences.py  user_profile.py
wakedock/api/v1/: __init__.py  containers.py  (+2 more)
wakedock/config/: auth_config.py
wakedock/controllers/: __init__.py  alert_controller.py  analytics_controller.py  auth_controller.py  base_controller.py  container_controller.py  dashboard_controller.py  services_controller.py
wakedock/core/: __init__.py  advanced_analytics.py  alerts_dependencies.py  alerts_service.py  analytics.py  api_optimization.py  auth.py  auth_middleware.py  auth_service.py  auto_deployment_service.py  base_service.py  cache.py  caddy.py  cicd_service.py  compose_deployment.py  compose_parser.py  compose_validator.py  compression_middleware.py  config.py  dashboard_service.py  database.py  dependencies.py  dependency_manager.py  docker_client.py  docker_manager.py  env_manager.py  environment_service.py  exceptions.py  health.py  log_collector.py  log_optimization_service.py  log_search_service.py  logging.py  logging_config.py  logging_service.py  metrics.py  metrics_collector.py  middleware.py  mobile_cache.py  mobile_optimization_service.py  (+16 more)
wakedock/database/: __init__.py  base.py  cli.py  database.py  init_db.py  models.py
wakedock/graphql/: __init__.py  resolvers.py  schema.py  types.py
wakedock/middleware/: __init__.py  auth_middleware.py  base_middleware.py  services_middleware.py
wakedock/models/: __init__.py  alerts.py  alerts_models.py  analytics_models.py  audit.py  auth.py  auth.py.disabled  auth_models.py  authentication_models.py  authentication_models.py.disabled  base.py  cicd.py  container.py  containers_models.py  dashboard.py  dashboard_models.py  deployment.py  environment.py  environment.py.disabled  notification.py  security.py  stack.py  swarm.py  user.py  user.py.disabled
wakedock/plugins/: __init__.py  base_plugin.py  plugin_api.py  plugin_loader.py  plugin_manager.py  plugin_registry.py  plugin_security.py
wakedock/repositories/: __init__.py  alert_repository.py  analytics_repository.py  auth_repository.py  base_repository.py  container_repository.py  dashboard_repository.py  services_repository.py
wakedock/routes/: alerts_routes.py  analytics_routes.py  authentication_routes.py  containers_routes.py  dashboard_routes.py
wakedock/schemas/: __init__.py
wakedock/security/: __init__.py  rate_limit.py  validation.py
wakedock/serializers/: __init__.py  alert_serializers.py  analytics_serializers.py  auth_serializers.py  base_serializer.py  base_serializers.py  container_serializers.py  dashboard_serializers.py  services_serializers.py
wakedock/services/: __init__.py  alert_service.py  analytics_service.py  auth_service.py  base_service.py  container_service.py  dashboard_service.py  docker_service.py
wakedock/templates/: loading.py
wakedock/utils/: __init__.py  validation.py
wakedock/validators/: __init__.py  alert_validator.py  analytics_validator.py  auth_validator.py  base_validator.py  container_validator.py  dashboard_validator.py  services_validator.py
wakedock/views/: __init__.py  alert_view.py  analytics_view.py  auth_view.py  base_view.py  container_view.py  dashboard_view.py  services_view.py
(+8 files in other folders)
